yiltc-go-backup/testsuite/negative/bang_not.yilt
// Negative: ! prefix for logical negation is rejected; use `not` keyword.
fn main()
    let x = true
    if !x
        print("nope")
